# compiler-theory-proj

./: .clang-format  CMakeLists.txt  README.md  TODOS  compile_commands.json  debug.sh  leak.sh  run.sh  test.txt  test2.txt
.cache/clangd/index/: AST.hpp.2072247A7D120A51.idx  ASTPrinter.hpp.52FA0610BC5099E1.idx  Environment.cpp.2248D207EE566149.idx  Environment.hpp.1735EAC874822D72.idx  Interpreter.cpp.53C92DF40DCA44F6.idx  Interpreter.hpp.D884CB2012661114.idx  Main.cpp.D7F2755F62E5EDC1.idx  Parser.cpp.E6001D0FC2F307D8.idx  Parser.hpp.F1D2722B614329F5.idx  ParsingError.hpp.E945C4A09539F721.idx  Runner.cpp.E85AF4AE1FE57DAF.idx  Runner.hpp.8838BF994DEB824E.idx  RuntimeError.hpp.A1EFEB0D127B448F.idx  Scanner.cpp.519740CE44E9B024.idx  Scanner.hpp.7C00C9879D8F1D9E.idx  ScanningError.hpp.1B49DF41CE57D7CF.idx  Token.cpp.00E0E127E3D3C783.idx  Token.hpp.AABD55E06EF85817.idx  Value.hpp.E9C3D6E1F40B11EF.idx
report/: main.aux  main.fdb_latexmk  main.fls  main.lol  main.out  main.tex  main.toc  report.aux  report.fdb_latexmk  report.fls  report.lol  report.out  report.tex  report.toc  section1.tex  section2.tex  section3.tex  section4.tex  section5.tex  section6.tex  section7.tex  uom-coursework.cls
src/: CMakeLists.txt  Main.cpp
src/analysis/: AnalysisVisitor.cpp  AnalysisVisitor.hpp  EnvStack.hpp  ReturnVisitor.cpp  ReturnVisitor.hpp  Signature.cpp  Signature.hpp  SymbolStack.cpp  SymbolStack.hpp  SymbolTable.cpp  SymbolTable.hpp
src/backend/: Environment.cpp  Environment.hpp  Symbol.hpp
src/common/: AST.cpp  AST.hpp  Abort.hpp  Assert.hpp  Error.cpp  Error.hpp  Errors.cpp  Item.cpp  Item.hpp  Token.cpp  Token.hpp  Value.cpp  Value.hpp  Visitor.hpp
src/errors/: RuntimeError.hpp
src/evaluator/: Environment.hpp  Interpreter.cpp  Interpreter.hpp
src/ir_gen/: Frame.cpp  Frame.hpp  GenVisitor.cpp  GenVisitor.hpp  InstructionCountVisitor.cpp  InstructionCountVisitor.hpp  RefStack.cpp  RefStack.hpp  SymbolInfo.cpp  SymbolInfo.hpp  TypeVisitor.cpp  TypeVisitor.hpp  VarDeclCountVisitor.cpp  VarDeclCountVisitor.hpp
src/lexer/: DFSA.cpp  DFSA.hpp  Dfsa.cpp  Dfsa.hpp  Lexer.cpp  Lexer.hpp  LexerBuilder.cpp  LexerBuilder.hpp  LexerDirector.cpp  LexerDirector.hpp
src/old/: AST.hpp  Token.cpp  Value.hpp
src/old/errors/: ParsingError.hpp  ScanningError.hpp
src/old/evaluator/: Environment.cpp
src/old/printer/: ASTPrinter.hpp
src/old/scanner/: Scanner.hpp
src/parl/: AST.cpp  AST.hpp  Core.hpp  Token.cpp  Token.hpp  Value.hpp
src/parser/: Parser.cpp  Parser.hpp  PrinterVisistor.cpp  PrinterVisitor.cpp  PrinterVisitor.hpp
src/preprocess/: IsFunctionVisitor.cpp  IsFunctionVisitor.hpp  ReorderVisitor.cpp  ReorderVisitor.hpp
src/runner/: Runner.cpp  Runner.hpp
src/scanner/: Scanner.cpp
testing/: c23.c  test-gol.pix  test-lexer-negative.parl  test-lexer-positive.parl  test-parser-negative.parl  test-parser-positive.parl  test-prog.pix  test1.parl  test1.txt  test10.parl  test10.pix  test11.parl  test11.pix  test12.parl  test13.pix  test14.parl  test14.pix  test15.pix  test16.pix  test17.parl  test17.pix  test18.pix  test19.parl  test19.pix  test2.parl  test2.txt  test20.parl  test20.pix  test21.parl  test22.pix  test23.parl  test23.pix  test24.pix  test25.parl  test26.pix  test27.parl  test27.pix  test28.pix  test29.pix  test3.txt  (+27 more)
